# PSP2-Bootimage-Extractor

./: CMakeLists.txt  README.md  exports.yml
src/: main.c
